[package]
name = "redger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossbeam = "0.8.2"
rwgfx = { path = "../rwgfx", version = "0.1.0" }
rwlog = { path = "../rwlog", version = "0.1.0" }
